--- a/StationDeSki/pom.xml
+++ b/StationDeSki/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.etudeDeCas</groupId>
 	<artifactId>StationDeSki</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>StationDeSki</name>
 	<description>StationDeSki</description>
 	<properties>
